// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elementary table component should render a table with custom cell size 1`] = `
<table
  className="table-root"
>
  <thead>
    <Row
      absoluteIndex={0}
      cells={
        [
          {
            "id": "wawoo",
            "value": "Wawooo!",
          },
          {
            "id": "wah",
            "value": "Wah!",
          },
          {
            "id": "cool",
            "value": "Cool!",
          },
        ]
      }
      className=""
      columns={
        {
          "0": {
            "size": 320,
          },
          "4": {
            "size": 300,
          },
        }
      }
      elevatedColumnIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      elevatedRowIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      getRowTreeLength={[Function]}
      getVisibleRows={[Function]}
      globalColumnProps={{}}
      id="front"
      index={0}
      isHeader={true}
      isSelectable={false}
      isVisible={true}
      level={0}
      relativeSubIndexesMapping={{}}
      selectedCells={[]}
      size={24}
    />
  </thead>
  <tbody>
    <Row
      absoluteIndex={1}
      cells={
        [
          {
            "id": "react",
            "subItems": [
              {
                "cells": [
                  {
                    "id": "storybook",
                    "value": "Storybook",
                  },
                  {
                    "id": "jest",
                    "value": "Jest",
                  },
                  {
                    "id": "Enzym",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "storybook",
                            "value": "Storybook",
                          },
                          {
                            "id": "jest",
                            "value": "Jest",
                          },
                          {
                            "id": "Enzym",
                            "subItems": [],
                            "value": "enzyme",
                          },
                        ],
                        "id": "foo",
                      },
                      {
                        "cells": [
                          {
                            "id": "docker",
                            "value": "Docker",
                          },
                          {
                            "id": "doccomp",
                            "value": "Docker compose",
                          },
                          {
                            "id": "Sentry",
                            "subItems": [],
                            "value": "Sentry",
                          },
                        ],
                        "id": "back",
                      },
                    ],
                    "value": "enzyme",
                  },
                ],
                "id": "foo",
              },
              {
                "cells": [
                  {
                    "id": "docker",
                    "value": "Docker",
                  },
                  {
                    "id": "doccomp",
                    "value": "Docker compose",
                  },
                  {
                    "id": "Sentry",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "storybook",
                            "value": "Storybook",
                          },
                          {
                            "id": "jest",
                            "value": "Jest",
                          },
                          {
                            "id": "Enzym",
                            "subItems": [],
                            "value": "enzyme",
                          },
                        ],
                        "id": "foo",
                      },
                      {
                        "cells": [
                          {
                            "id": "docker",
                            "value": "Docker",
                          },
                          {
                            "id": "doccomp",
                            "value": "Docker compose",
                          },
                          {
                            "id": "Sentry",
                            "subItems": [],
                            "value": "Sentry",
                          },
                        ],
                        "id": "back",
                      },
                    ],
                    "value": "Sentry",
                  },
                ],
                "id": "back",
              },
            ],
            "value": "React",
          },
          {
            "id": "angular",
            "value": "Angular",
          },
          {
            "id": "vuejs",
            "value": "VueJS",
          },
        ]
      }
      className=""
      columns={
        {
          "0": {
            "size": 320,
          },
          "4": {
            "size": 300,
          },
        }
      }
      elevatedColumnIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      elevatedRowIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      getRowTreeLength={[Function]}
      getVisibleRows={[Function]}
      globalColumnProps={{}}
      id="front1"
      index={1}
      isSelectable={true}
      isVisible={true}
      level={0}
      relativeSubIndexesMapping={{}}
      selectedCells={[]}
      title="foo"
    />
    <Row
      absoluteIndex={2}
      cells={
        [
          {
            "id": "python",
            "value": "Python",
          },
          {
            "id": "Go",
            "subItems": [
              {
                "cells": [
                  {
                    "id": "storybook",
                    "value": "Storybook",
                  },
                  {
                    "id": "jest",
                    "value": "Jest",
                  },
                  {
                    "id": "Enzym",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "storybook",
                            "value": "Storybook",
                          },
                          {
                            "id": "jest",
                            "value": "Jest",
                          },
                          {
                            "id": "Enzym",
                            "subItems": [],
                            "value": "enzyme",
                          },
                        ],
                        "id": "foo",
                      },
                      {
                        "cells": [
                          {
                            "id": "docker",
                            "value": "Docker",
                          },
                          {
                            "id": "doccomp",
                            "value": "Docker compose",
                          },
                          {
                            "id": "Sentry",
                            "subItems": [],
                            "value": "Sentry",
                          },
                        ],
                        "id": "back",
                      },
                    ],
                    "value": "enzyme",
                  },
                ],
                "id": "foo",
              },
              {
                "cells": [
                  {
                    "id": "docker",
                    "value": "Docker",
                  },
                  {
                    "id": "doccomp",
                    "value": "Docker compose",
                  },
                  {
                    "id": "Sentry",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "storybook",
                            "value": "Storybook",
                          },
                          {
                            "id": "jest",
                            "value": "Jest",
                          },
                          {
                            "id": "Enzym",
                            "subItems": [],
                            "value": "enzyme",
                          },
                        ],
                        "id": "foo",
                      },
                      {
                        "cells": [
                          {
                            "id": "docker",
                            "value": "Docker",
                          },
                          {
                            "id": "doccomp",
                            "value": "Docker compose",
                          },
                          {
                            "id": "Sentry",
                            "subItems": [],
                            "value": "Sentry",
                          },
                        ],
                        "id": "back",
                      },
                    ],
                    "value": "Sentry",
                  },
                ],
                "id": "back",
              },
            ],
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ]
      }
      className=""
      columns={
        {
          "0": {
            "size": 320,
          },
          "4": {
            "size": 300,
          },
        }
      }
      elevatedColumnIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      elevatedRowIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      getRowTreeLength={[Function]}
      getVisibleRows={[Function]}
      globalColumnProps={{}}
      id="back"
      index={2}
      isSelectable={true}
      isVisible={true}
      level={0}
      relativeSubIndexesMapping={{}}
      selectedCells={[]}
      size={150}
    />
  </tbody>
</table>
`;

exports[`elementary table component should render the default table 1`] = `
<table
  className="table-root"
>
  <thead>
    <Row
      absoluteIndex={0}
      cells={
        [
          {
            "id": "wawoo",
            "value": "Wawooo!",
          },
          {
            "id": "wah",
            "value": "Wah!",
          },
          {
            "id": "cool",
            "value": "Cool!",
          },
        ]
      }
      className=""
      columns={{}}
      elevatedColumnIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      elevatedRowIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      getRowTreeLength={[Function]}
      getVisibleRows={[Function]}
      globalColumnProps={{}}
      id="front"
      index={0}
      isHeader={true}
      isSelectable={false}
      isVisible={true}
      level={0}
      relativeSubIndexesMapping={{}}
      selectedCells={[]}
    />
  </thead>
  <tbody>
    <Row
      absoluteIndex={1}
      cells={
        [
          {
            "id": "react",
            "subItems": [
              {
                "cells": [
                  {
                    "id": "storybook",
                    "value": "Storybook",
                  },
                  {
                    "id": "jest",
                    "value": "Jest",
                  },
                  {
                    "id": "Enzym",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "storybook",
                            "value": "Storybook",
                          },
                          {
                            "id": "jest",
                            "value": "Jest",
                          },
                          {
                            "id": "Enzym",
                            "subItems": [],
                            "value": "enzyme",
                          },
                        ],
                        "id": "foo",
                      },
                      {
                        "cells": [
                          {
                            "id": "docker",
                            "value": "Docker",
                          },
                          {
                            "id": "doccomp",
                            "value": "Docker compose",
                          },
                          {
                            "id": "Sentry",
                            "subItems": [],
                            "value": "Sentry",
                          },
                        ],
                        "id": "back",
                      },
                    ],
                    "value": "enzyme",
                  },
                ],
                "id": "foo",
              },
              {
                "cells": [
                  {
                    "id": "docker",
                    "value": "Docker",
                  },
                  {
                    "id": "doccomp",
                    "value": "Docker compose",
                  },
                  {
                    "id": "Sentry",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "storybook",
                            "value": "Storybook",
                          },
                          {
                            "id": "jest",
                            "value": "Jest",
                          },
                          {
                            "id": "Enzym",
                            "subItems": [],
                            "value": "enzyme",
                          },
                        ],
                        "id": "foo",
                      },
                      {
                        "cells": [
                          {
                            "id": "docker",
                            "value": "Docker",
                          },
                          {
                            "id": "doccomp",
                            "value": "Docker compose",
                          },
                          {
                            "id": "Sentry",
                            "subItems": [],
                            "value": "Sentry",
                          },
                        ],
                        "id": "back",
                      },
                    ],
                    "value": "Sentry",
                  },
                ],
                "id": "back",
              },
            ],
            "value": "React",
          },
          {
            "id": "angular",
            "value": "Angular",
          },
          {
            "id": "vuejs",
            "value": "VueJS",
          },
        ]
      }
      className=""
      columns={{}}
      elevatedColumnIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      elevatedRowIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      getRowTreeLength={[Function]}
      getVisibleRows={[Function]}
      globalColumnProps={{}}
      id="front1"
      index={1}
      isSelectable={true}
      isVisible={true}
      level={0}
      relativeSubIndexesMapping={{}}
      selectedCells={[]}
      title="foo"
    />
    <Row
      absoluteIndex={2}
      cells={
        [
          {
            "id": "python",
            "value": "Python",
          },
          {
            "id": "Go",
            "subItems": [
              {
                "cells": [
                  {
                    "id": "storybook",
                    "value": "Storybook",
                  },
                  {
                    "id": "jest",
                    "value": "Jest",
                  },
                  {
                    "id": "Enzym",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "storybook",
                            "value": "Storybook",
                          },
                          {
                            "id": "jest",
                            "value": "Jest",
                          },
                          {
                            "id": "Enzym",
                            "subItems": [],
                            "value": "enzyme",
                          },
                        ],
                        "id": "foo",
                      },
                      {
                        "cells": [
                          {
                            "id": "docker",
                            "value": "Docker",
                          },
                          {
                            "id": "doccomp",
                            "value": "Docker compose",
                          },
                          {
                            "id": "Sentry",
                            "subItems": [],
                            "value": "Sentry",
                          },
                        ],
                        "id": "back",
                      },
                    ],
                    "value": "enzyme",
                  },
                ],
                "id": "foo",
              },
              {
                "cells": [
                  {
                    "id": "docker",
                    "value": "Docker",
                  },
                  {
                    "id": "doccomp",
                    "value": "Docker compose",
                  },
                  {
                    "id": "Sentry",
                    "subItems": [
                      {
                        "cells": [
                          {
                            "id": "storybook",
                            "value": "Storybook",
                          },
                          {
                            "id": "jest",
                            "value": "Jest",
                          },
                          {
                            "id": "Enzym",
                            "subItems": [],
                            "value": "enzyme",
                          },
                        ],
                        "id": "foo",
                      },
                      {
                        "cells": [
                          {
                            "id": "docker",
                            "value": "Docker",
                          },
                          {
                            "id": "doccomp",
                            "value": "Docker compose",
                          },
                          {
                            "id": "Sentry",
                            "subItems": [],
                            "value": "Sentry",
                          },
                        ],
                        "id": "back",
                      },
                    ],
                    "value": "Sentry",
                  },
                ],
                "id": "back",
              },
            ],
            "value": "Go",
          },
          {
            "id": "Java",
            "value": "java",
          },
        ]
      }
      className=""
      columns={{}}
      elevatedColumnIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      elevatedRowIndexes={
        {
          "absoluteEndPositions": {},
          "elevations": {},
        }
      }
      getRowTreeLength={[Function]}
      getVisibleRows={[Function]}
      globalColumnProps={{}}
      id="back"
      index={2}
      isSelectable={true}
      isVisible={true}
      level={0}
      relativeSubIndexesMapping={{}}
      selectedCells={[]}
    />
  </tbody>
</table>
`;
